--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "v4",
-  "description": "Personal Website V4",
+  "description": "Rottay Website",
   "version": "1.0.0",
-  "author": "Brittany Chiang <brittany.chiang@gmail.com>",
+  "author": "Daniel Avila <daniel.avila@rottay.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bchiang7/v4"
+    "url": "https://github.com/davila23"
   },
   "keywords": [
     "gatsby"
@@ -56,10 +56,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-icon-cloud": "^4.0.0",
+    "react-icon-cloud": "1.1.2",
+    "react-player": "^2.9.0",
     "react-transition-group": "^4.3.0",
     "scrollreveal": "^4.0.5",
-    "styled-components": "^5.3.0"
+    "simple-icons": "^6.10.0",
+    "styled-components": "^5.3.0",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
