--- a/amplify.yml
+++ b/amplify.yml
@@ -3,30 +3,14 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm install -g yarn
         - yarn install
     build:
       commands:
         - yarn run build
-        - echo "Build completed"
   artifacts:
-    baseDirectory: .next
+    baseDirectory: out
     files:
       - '**/*'
   cache:
     paths:
-      - 'node_modules/**/*'
-      - '.next/cache/**/*'
-  customHeaders:
-    - pattern: '**/*'
-      headers:
-        - key: 'Cache-Control'
-          value: 's-maxage=31536000,immutable'
-    - pattern: '_next/static/**/*'
-      headers:
-        - key: 'Cache-Control'
-          value: 'public,immutable,max-age=31536000'
-    - pattern: '_next/image/**/*'
-      headers:
-        - key: 'Cache-Control'
-          value: 'public,immutable,max-age=31536000'
+      - node_modules/**/*
