--- a/amplify.yml
+++ b/amplify.yml
@@ -3,10 +3,16 @@ frontend:
   phases:
     preBuild:
       commands:
+        - nvm install 20
+        - nvm use 20
+        - nvm alias default 20
         - node --version
+        - npm install -g yarn
         - yarn install
     build:
       commands:
+        - nvm use 20
+        - node --version
         - yarn run build
   artifacts:
     baseDirectory: out
