--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
   "devDependencies": {
     "@aws-amplify/adapter-nextjs": "^1.6.9",
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
-    "tailwindcss": "^4.1.13",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
